feat(blog): add blog section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import Blog from '../components/Blog.astro';
 import Hero from '../components/Hero.astro';
 import Portfolio from '../components/Portfolio.astro';
 import Skills from '../components/Skills.astro';
@@ -8,6 +9,8 @@ import Layout from '../layouts/Layout.astro';
 <Layout title="edcilo.com">
 	<main>
 		<Hero />
+
+		<Blog />
 
 		<Skills />
 
