perf(image size): add width and height of article card images

--- a/src/components/ArticleCard.astro
+++ b/src/components/ArticleCard.astro
@@ -14,7 +14,7 @@ const { url, title, description, image } = Astro.props;
 ---
 <a href={url} class="">
     <div class="card">
-        <img class="rounded-t-lg" src={image.url} alt={image.alt} />
+        <img class="rounded-t-lg" src={image.url} width="374" height="213" alt={image.alt} />
         <div class="content">
             <h5 class="title">
                 {title}
