fix(header): navigation anchors redirect to root path

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,15 +4,15 @@ import InlineNav from './InlineNav.astro';
 const siteNav = [
     {
         label: 'Skills',
-        url: '#skills'
+        url: '/#skills'
     },
     {
         label: 'Portfolio',
-        url: '#portfolio'
+        url: '/#portfolio'
     },
     {
         label: 'Blog',
-        url: '#blog'
+        url: '/#blog'
     },
 ]
 const socialNav = [
