--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -45,6 +45,8 @@ html {
 
 body {
 	font-family: var(--font-base);
+	@apply bg-white min-w-[320px];
+	@apply dark:bg-zinc-950;
 }
 
 @media (prefers-reduced-motion: reduce) {
