feat(hero): add dark theme to hero section

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,11 +5,11 @@ import Logo from './Logo.astro';
 
 const siteNav = [
     {
-        label: 'Skills',
+        label: 'Habilidades',
         url: '/#skills'
     },
     {
-        label: 'Portfolio',
+        label: 'Porfolio',
         url: '/#portfolio'
     },
     {
