--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -32,13 +32,14 @@ const socialNav = [
 <style>
 footer {
     @apply border-t p-3 antialiased;
+    @apply bg-white;
     @apply sm:flex sm:items-center sm:justify-between;
-    @apply dark:bg-gray-800;
+    @apply dark:border-zinc-700 dark:bg-zinc-950;
 
     .rights {
         @apply mb-4 text-sm text-center text-gray-500;
         @apply sm:mb-0;
-        @apply dark:text-gray-400;
+        @apply dark:!text-slate-600;
 
         a {
             @apply hover:underline;
