--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -42,7 +42,7 @@ const me = {
 
 <style>
 .hero {;
-    @apply overflow-hidden flex justify-center;
+    @apply overflow-hidden flex justify-center min-h-[520px];
 
     .container {
         @apply relative flex items-center justify-center md:justify-between;
