--- a/src/components/ArticleCard.astro
+++ b/src/components/ArticleCard.astro
@@ -12,9 +12,9 @@ interface Props {
 
 const { url, title, description, image } = Astro.props;
 ---
-<a href={url} class="">
+<a href={url}>
     <div class="card">
-        <img class="rounded-t-lg" src={image.url} width="374" height="213" alt={image.alt} />
+        <img class="cover" src={image.url} width="374" height="213" alt={image.alt} />
         <div class="content">
             <h5 class="title">
                 {title}
@@ -32,18 +32,26 @@ a {
 }
 
 .card {
-    @apply max-w-sm bg-white border rounded-lg hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700;
+    @apply max-w-sm bg-white border rounded-lg;
+    @apply hover:border-gray-300;
+    @apply dark:bg-zinc-950 dark:border-zinc-700 dark:hover:bg-zinc-900 dark:hover:border-zinc-600;
 
     .content {
         @apply p-4;
     }
 
+    .cover {
+        @apply rounded-t-lg w-full aspect-video;
+    }
+
     .title {
-        @apply mb-3 text-2xl font-bold tracking-tight text-gray-900 dark:text-white;
+        @apply mb-3 text-xl font-semibold tracking-tight text-gray-900;
+        @apply dark:!text-slate-100;
     }
 
     .resume {
-        @apply font-normal text-gray-700 dark:text-gray-400;
+        @apply font-normal text-gray-700;
+        @apply dark:!text-slate-500;
     }
 }
 </style>
