--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -43,6 +43,9 @@ body {
 	font-family: var(--font-base);
 	@apply bg-white min-w-[320px];
 	@apply dark:bg-zinc-950;
+
+	@apply text-black;
+    @apply dark:!text-slate-100;
 }
 
 @media (prefers-reduced-motion: reduce) {
