--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,7 @@ import '@fontsource-variable/fira-code';
 import '@fontsource-variable/open-sans';
 import Footer from '../components/Footer.astro';
 import Header from '../components/Header.astro';
+import GA4 from '../components/GA4.astro';
 
 interface Props {
 	title: string;
@@ -20,6 +21,7 @@ const { title } = Astro.props;
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
+		<GA4 />
 	</head>
 	<body>
 		<Header />
