fix(hero): center location in mobile

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -68,9 +68,10 @@ const me = {
             }
 
             .location {
-                @apply flex gap-1 items-center;
+                @apply w-full flex gap-1 items-center justify-center;
                 @apply mb-3 text-sm text-zinc-500;
                 @apply dark:text-zinc-400;
+                @apply md:justify-start;
             }
 
             .resume {
