feat(navigation): fix link order

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,16 +5,16 @@ import Logo from './Logo.astro';
 
 const siteNav = [
     {
+        label: 'Blog',
+        url: '/#blog'
+    },
+    {
         label: 'Habilidades',
         url: '/#skills'
     },
     {
         label: 'Porfolio',
         url: '/#portfolio'
-    },
-    {
-        label: 'Blog',
-        url: '/#blog'
     },
 ]
 const socialNav = [
@@ -38,7 +38,7 @@ const socialNav = [
 
 <header class="header">
     <h1 class="mx-2">
-        <a href="/">
+        <a href="/#home">
             <Logo />
         </a>
     </h1>
