--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -13,7 +13,7 @@ const me = {
 
 ---
 
-<section class="hero">
+<section id="home" class="hero">
     <div class="container">
         <div class="e">
             <ELogo />
