--- a/src/components/DarkMode.astro
+++ b/src/components/DarkMode.astro
@@ -23,6 +23,46 @@ import { Icon } from 'astro-icon/components';
     @apply size-5 text-slate-200 hidden;
     @apply dark:block;
 }
+
+.theme-toggle:hover .sun {
+    animation: rotate .5s 1 ease;
+}
+
+.theme-toggle:hover .moon {
+    animation: swing .5s 1 ease;
+}
+
+@keyframes rotate {
+    from {
+        transform: rotate3d(0, 0, 1, 200deg);
+    }
+
+    to {
+        transform: translate3d(0, 0, 0);
+    }
+}
+
+@keyframes swing {
+  20% {
+    transform: rotate3d(0, 0, 1, 15deg);
+  }
+
+  40% {
+    transform: rotate3d(0, 0, 1, -10deg);
+  }
+
+  60% {
+    transform: rotate3d(0, 0, 1, 5deg);
+  }
+
+  80% {
+    transform: rotate3d(0, 0, 1, -5deg);
+  }
+
+  to {
+    transform: rotate3d(0, 0, 1, 0deg);
+  }
+}
 </style>
 
 <script is:inline>
