--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -20,7 +20,9 @@ const me = {
         </div>
 
         <div class="jumbotron">
-            <Badge type="success">{me.title}</Badge>
+            <span class="badge">
+                <Badge type="success">{me.title}</Badge>
+            </span>
             <h1>{me.name}</h1>
             <p class="location">
                 <Icon name="pin-map" />
@@ -65,6 +67,13 @@ const me = {
                 @apply mt-3 mb-1 text-2xl font-medium tracking-tight leading-none text-gray-900;
                 @apply md:text-3xl lg:text-4xl;
                 @apply dark:!text-slate-100;
+
+                animation: backInLeft .8s 1 ease;
+            }
+
+            .badge {
+                @apply block;
+                animation: backInLeft .5s 1 ease;
             }
 
             .location {
@@ -72,12 +81,16 @@ const me = {
                 @apply mb-3 text-sm text-zinc-500;
                 @apply dark:text-zinc-400;
                 @apply md:justify-start;
+
+                animation: backInLeft 1.1s 1 ease;
             }
 
             .resume {
                 @apply mb-8 text-lg font-normal text-gray-500 text-pretty;
                 @apply lg:text-xl;
                 @apply dark:!text-gray-400;
+
+                animation: backInLeft 1.4s 1 ease;
             }
 
             .skills {
@@ -88,6 +101,8 @@ const me = {
 
                 li {
                     @apply text-center;
+
+                    animation: fadeIn 1.7s ease;
                 }
 
                 span {
@@ -109,9 +124,51 @@ const me = {
 
         .scroll-icon {
             @apply absolute bottom-1 left-1/2 -translate-x-1/2;
-            @apply size-8;
-            @apply dark:!text-slate-100;
+            @apply size-8 text-zinc-400/50;
+            @apply dark:!text-slate-700/50;
+
+            animation: bounce 1.4s infinite;
         }
+    }
+}
+
+@keyframes backInLeft {
+    0% {
+        transform: translateX(-2000px) scale(0.9);
+        opacity: 0.7;
+    }
+
+    80% {
+        transform: translateX(0px) scale(0.9);
+        opacity: 0.7;
+    }
+
+    100% {
+        transform: scale(1);
+        opacity: 1;
+    }
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    40% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes bounce {
+    0%, 100% {
+        transform: translateY(-10%);
+        animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
+    }
+    50% {
+        transform: translateY(0);
+        animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
     }
 }
 </style>
