perf(accessibility): apply lighthouse recomendations

--- a/src/components/DarkMode.astro
+++ b/src/components/DarkMode.astro
@@ -2,7 +2,7 @@
 import { Icon } from 'astro-icon/components';
 ---
 
-<button id="themeToggle" class="theme-toggle">
+<button id="themeToggle" class="theme-toggle" aria-label="Theme toggle">
     <Icon name="sun" class="sun" />
     <Icon name="moon" class="moon" />
 </button>
