--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -38,7 +38,7 @@ const socialNav = [
 
 <header class="header">
     <h1 class="mx-2">
-        <a href="/#home">
+        <a href="/#home" aria-label="edcilo.com logo">
             <Logo />
         </a>
     </h1>
