docs(article): bem methodology article

--- a/src/layouts/Post.astro
+++ b/src/layouts/Post.astro
@@ -75,6 +75,14 @@ const { title, frontmatter } = Astro.props;
     }
 
     .content {
+        h2 {
+            @apply text-2xl font-bold mt-6 mb-4;
+        }
+
+        h3 {
+            @apply text-xl font-bold mt-6 mb-4;
+        }
+
         p {
             @apply mb-4;
         }
