fix(tailwind): use font-mono class instead of font-family property
- change monospace font family to JetBrains
- remove --font-base and --font-mono css variables

--- a/src/components/Badge.astro
+++ b/src/components/Badge.astro
@@ -40,7 +40,6 @@ switch (type) {
 
 <style>
 .badge {
-    font-family: var(--font-mono);
-    @apply inline-flex items-center text-xs font-medium me-2 px-2.5 py-0.5 rounded;
+    @apply font-mono inline-flex items-center text-xs font-medium me-2 px-2.5 py-0.5 rounded;
 }
 </style>
