--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -24,8 +24,7 @@
     @apply relative flex flex-col items-center py-16;
 
     h1 {
-        font-family: var(--font-mono);
-        @apply my-9 text-4xl font-medium text-center;
+        @apply font-mono my-9 text-4xl font-medium text-center;
     }
 }
 </style>
