--- a/src/components/Portfolio.astro
+++ b/src/components/Portfolio.astro
@@ -55,8 +55,7 @@ const projects = [
     @apply relative flex flex-col items-center py-16;
 
     h1 {
-        font-family: var(--font-mono);
-        @apply my-9 text-4xl font-medium text-center;
+        @apply font-mono my-9 text-4xl font-medium text-center;
         @apply dark:!text-slate-100;
     }
 
