--- a/src/components/SkillCard.astro
+++ b/src/components/SkillCard.astro
@@ -46,8 +46,7 @@ const { title, techs } = Astro.props;
     @apply p-4;
 
     h2 {
-        font-family: var(--font-mono);
-        @apply text-center font-semibold;
+        @apply font-mono text-center font-semibold;
         @apply dark:text-slate-100;
     }
 
