--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -128,8 +128,7 @@ const skills = [
         @apply dark:border-zinc-700;
 
         h1 {
-            font-family: var(--font-mono);
-            @apply my-9 text-4xl font-medium text-center;
+            @apply font-mono my-9 text-4xl font-medium text-center;
             @apply dark:!text-slate-100;
         }
 
