--- a/src/components/Blog.astro
+++ b/src/components/Blog.astro
@@ -27,8 +27,7 @@ const recentPosts = allPosts.slice(0, 4);
         @apply dark:border-zinc-700;
 
         h1 {
-            font-family: var(--font-mono);
-            @apply my-9 text-4xl font-medium text-center;
+            @apply font-mono my-9 text-4xl font-medium text-center;
             @apply dark:!text-slate-100;
         }
 
