--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -63,8 +63,7 @@ const me = {
             @apply md:w-1/2 md:text-left;
 
             h1 {
-                font-family: var(--font-mono);
-                @apply mt-3 mb-1 text-2xl font-medium tracking-tight leading-none text-gray-900;
+                @apply font-mono mt-3 mb-1 text-2xl font-medium tracking-tight leading-none text-gray-900;
                 @apply md:text-3xl lg:text-4xl;
                 @apply dark:!text-slate-100;
 
