--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -61,8 +61,7 @@ const { image, url, name, description, tags } = Astro.props;
     }
 
     .title {
-        font-family: var(--font-mono);
-        @apply mb-3 text-xl font-semibold tracking-tight text-gray-900;
+        @apply font-mono mb-3 text-xl font-semibold tracking-tight text-gray-900;
         @apply dark:!text-slate-100;
     }
 
