fix(styles): minor fixes in article text

--- a/src/components/ArticleCard.astro
+++ b/src/components/ArticleCard.astro
@@ -50,7 +50,7 @@ a {
     }
 
     .resume {
-        @apply font-normal text-gray-700;
+        @apply font-normal text-gray-700 line-clamp-3 leading-relaxed;
         @apply dark:!text-slate-500;
     }
 }
