--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -66,7 +66,7 @@ const { image, url, name, description, tags } = Astro.props;
     }
 
     .description {
-        @apply mb-3 font-normal text-gray-700;
+        @apply mb-3 font-normal text-gray-700 line-clamp-3 leading-relaxed;
         @apply dark:!text-slate-500;
     }
 }
