fix(svg): use fill tailwind class to set color

--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -7,7 +7,7 @@
   xmlns="http://www.w3.org/2000/svg"
   xmlns:xlink="http://www.w3.org/1999/xlink"
   xml:space="preserve"
-  style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;"
+  style="fill-rule:evenodd;"
   fill="var(--color-dark)">
     <g transform="matrix(0.501456,0,0,0.501456,1.00398,0)" fill="currentColor">
       <g transform="matrix(1,0,0,1,-194.474,-130.738)">
@@ -33,7 +33,7 @@
 
 <style>
 svg {
-    @apply text-black;
-    @apply dark:text-white;
+    @apply text-zinc-900;
+    @apply dark:text-slate-100;
 }
 </style>
