--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -162,11 +162,11 @@ const me = {
 
 @keyframes bounce {
     0%, 100% {
-        transform: translateY(-10%);
+        transform: translateY(-10%) translateX(-50%);
         animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
     }
     50% {
-        transform: translateY(0);
+        transform: translateY(0) translateX(-50%);
         animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
     }
 }
