feat(article): add cover
- fix article card cover size
- fix project card cover size
- add padding to portfolio container

--- a/src/components/ArticleCard.astro
+++ b/src/components/ArticleCard.astro
@@ -41,7 +41,7 @@ a {
     }
 
     .cover {
-        @apply rounded-t-lg w-full aspect-video;
+        @apply rounded-t-lg w-full w-full h-auto;
     }
 
     .title {
