--- a/src/components/Portfolio.astro
+++ b/src/components/Portfolio.astro
@@ -70,7 +70,7 @@ const projects = [
     }
 
     .container {
-        @apply max-w-screen-md columns-1 gap-4;
+        @apply max-w-screen-md columns-1 gap-4 px-4;
         @apply md:columns-2;
     }
 }
