--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -57,7 +57,7 @@ const { image, url, name, description, tags } = Astro.props;
     }
 
     .cover {
-        @apply rounded-t-lg w-full;
+        @apply rounded-t-lg w-full w-full h-auto;
     }
 
     .title {
