--- a/src/layouts/Post.astro
+++ b/src/layouts/Post.astro
@@ -14,6 +14,10 @@ interface Props {
             email: string;
             avatar: string;
         }
+        image: {
+            url: string;
+            alt: string;
+        }
         tags: string[];
     }
 }
@@ -22,6 +26,8 @@ const { title, frontmatter } = Astro.props;
 ---
 
 <Layout title={title}>
+    <div class="cover" style={`background-image: url(${frontmatter.image.url})`}></div>
+
     <div class="post">
         <article class="container">
             <h1>{frontmatter.title}</h1>
@@ -48,13 +54,21 @@ const { title, frontmatter } = Astro.props;
 </Layout>
 
 <style is:global>
+.cover {
+    @apply relative w-full h-[7.5rem] bg-slate-100 bg-no-repeat bg-cover bg-center;
+    @apply md:h-40;
+    @apply dark:after:bg-zinc-900;
+    @apply after:absolute after:w-full after:h-full after:bg-slate-200/30 after:opacity-80;
+    @apply after:bg-gradient-to-r after:from-cyan-500 after:to-blue-500;
+}
+
 .post {
     @apply flex justify-center;
     @apply text-black;
     @apply dark:!text-slate-100;
 
     .container {
-        @apply w-full max-w-2xl px-2 py-8;
+        @apply w-full max-w-2xl px-4 py-8;
     }
 
     h1 {
