--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -37,7 +37,7 @@ const { image, url, name, description, tags } = Astro.props;
 
 <style>
 .portfolio-card {
-    @apply max-w-sm bg-white border rounded-lg mb-4;
+    @apply max-w-sm bg-white border rounded-lg;
     @apply dark:bg-zinc-950 dark:border-zinc-700;
 
     footer {
